--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "html-react-parser": "^1.2.7",
     "node-sass": "^6.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
